	PR c++/59483 	PR c++/61148 	* search.c (accessible_p): Use current_nonlambda_class_type. 	* semantics.c (check_accessibility_of_qualified_id): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@211147 138bc75d-0d04-0410-961f-82ee72b054a4